--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tinymce/tinymce-react": "^6.3.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
+    "tinymce": "^8.1.2",
     "typescript": "^5.0.0"
   },
   "devDependencies": {
